--- a/index.html
+++ b/index.html
@@ -1,29 +1,13 @@
 <html>
 	<head>
 		<title>Buitar</title>
-		<script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
-		<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+		<!-- <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+		<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script> -->
+		<script type="text/javascript" src="http://at.alicdn.com/t/font_3249885_vwcmms10ac.js"></script>
 	</head>
 
 	<body>
-		<div id="app">
-			<!-- <div id="tools">
-      <form>
-        <input id="all-button-check" type="checkbox">All</input>
-      </form>
-
-      <form>
-        <input name="is-note" type="radio" checked>C</input>
-        <input name="is-note" type="radio">1</input>
-      </form>
-
-      <form>
-        <input name="is-rising" type="radio" checked>#</input>
-        <input name="is-rising" type="radio">b</input>
-      </form>
-
-    </div> -->
-		</div>
+		<div id="app"></div>
 		<canvas id="canvas" style="display: none"></canvas>
 	</body>
 </html>
