--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
 	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+		/>
 		<title>Buitar</title>
-		<!-- <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
-		<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script> -->
-		<script type="text/javascript" src="http://at.alicdn.com/t/font_3249885_vwcmms10ac.js"></script>
+		<script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+		<script
+			crossorigin
+			src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"
+		></script>
+		<script type="text/javascript" src="http://at.alicdn.com/t/font_3249885_lylhg16x8b.js"></script>
 	</head>
 
 	<body>
