--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 			crossorigin
 			src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"
 		></script>
-		<script type="text/javascript" src="http://at.alicdn.com/t/font_3249885_lylhg16x8b.js"></script>
+		<script
+			crossorigin
+			type="text/javascript"
+			src="http://at.alicdn.com/t/font_3249885_lylhg16x8b.js"
+		></script>
 	</head>
 
 	<body>
