--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,23 @@
 <html>
 	<head>
+		<meta charset="utf-8" />
+		<meta name="renderer" content="webkit" />
+		<meta name="force-rendering" content="webkit" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta
 			name="viewport"
-			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover"
 		/>
+		<link rel="shortcut icon" href="/favicon.ico" />
 		<title>Buitar</title>
 		<script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
 		<script
 			crossorigin
 			src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"
 		></script>
-		<!-- <script
-			crossorigin
-			type="text/javascript"
-			src="http://at.alicdn.com/t/font_3249885_lylhg16x8b.js"
-		></script> -->
 	</head>
 
 	<body>
 		<div id="app"></div>
-		<!-- <canvas id="canvas" style="display: none"></canvas> -->
 	</body>
 </html>
