--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
 		/>
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<title>Buitar</title>
-		<script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+		<!-- <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
 		<script
 			crossorigin
 			src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"
-		></script>
+		></script> -->
 	</head>
 
 	<body style="background-color: rgb(63, 67, 69);">
