--- a/packages/buitar/index.html
+++ b/packages/buitar/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -8,11 +9,13 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover"
 		/>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<title>Buitar</title>
 	</head>
 
 	<body style="background-color: rgb(63, 67, 69);">
 		<div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
