feat: vite pwa配置

--- a/packages/buitar/index.html
+++ b/packages/buitar/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -9,13 +9,16 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover"
 		/>
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+		<meta name="apple-mobile-web-app-title" content="Buitar" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<!-- <link rel="icon" type="image/svg+xml" href="/logo.svg" /> -->
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<title>Buitar</title>
 	</head>
 
-	<body style="background-color: rgb(63, 67, 69);">
+	<body style="background-color: rgb(63, 67, 69)">
 		<div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
