feat: 更新命名 & 对应文档

--- a/packages/buitar/index.html
+++ b/packages/buitar/index.html
@@ -189,7 +189,17 @@
 	</head>
 
 	<body style="background-color: rgb(63, 67, 69)">
-		<div id="app"></div>
+		<div id="app">
+			<img
+				src="/icons/apple-touch-icon-180x180.png"
+				style="display: block; margin: 30vh auto; border-radius: 20px; width: 120px"
+			/>
+			<div
+				style="margin: 0 auto; text-align: center; font-size: 40px; color: #fffa; font-weight: bold"
+			>
+				Buitar ...
+			</div>
+		</div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
